# react-native-webview

./: build_djinni.sh  index.d.ts  package.json  rncwebview.djinni
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  RNCWebViewJniUtils.cpp  RNCWebViewLifecycle.cpp  RNCWebViewLifecycle.h
android/src/main/cpp/jsi/: jsi.h
android/src/main/java/com/reactnativecommunity/webview/: RNCWebViewManager.java  RNCWebViewModule.java  RNCWebViewPackage.kt
android/src/main/java/com/reactnativecommunity/webview/events/: TopShouldStartLoadWithRequestEvent.kt
android/src/main/java/com/reactnativecommunity/webview/jsi/: Lifecycle.java
android/src/main/jni/: Android.mk  Application.mk
apple/: RNCWebView.m
djinni/cpp/: webview_lifecycle.hpp
djinni/java/com/reactnativecommunity/webview/: WebviewLifecycle.java
djinni/jni/: NativeWebviewLifecycle.cpp  NativeWebviewLifecycle.hpp
docs/: Guide.md
example/: App.tsx
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/examples/: Alerts.tsx  Downloads.tsx
src/: WebView.android.tsx  WebViewTypes.ts
src/cpp/: webview_lifecycle_impl.cpp  webview_lifecycle_impl.hpp
